Bug 800064 - Fix the units of computation in the shell watchdog. r=terrence